fixed visual bug on firefox + other bugs

--- a/styles/projects/minesweeper.css
+++ b/styles/projects/minesweeper.css
@@ -37,8 +37,8 @@ div.row div {
     width: calc(1.73em + 0.4px);
     height: calc(1.73em + 0.4px);
     border-width: 0.15em;
-    border-style: inset;
-    border-color: rgba(255, 255, 255, 0.6) rgba(0, 0, 0, 0.6) rgba(0, 0, 0, 0.6) rgba(255, 255, 255, 0.6);
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
     text-align: center;
     vertical-align: middle;
     box-sizing: border-box;
@@ -60,8 +60,11 @@ div.row div {
 }
 
 #minesLeft {
-    text-align: center;
     font-size: 1.2em;
+}
+
+#notice {
+    font-size: 0.8em;
 }
 
 #bestTime {
